Change Target Date text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="controls" style="">
     <button onclick = "App.previousWeek()" class="mdl-button mdl-button--colored mdl-js-button mdl-button--raised mdl-js-ripple-effect"> Previous Week</button>
 
-  <p style="text-align:center; width:200px"><span id='targetDate'>Today's Date</span><br>
+  <p style="text-align:center; width:200px"><span>Lesson Date:</span><br>
   <span id='nextLessonDate'>Next Lesson Date</span><br>
   <span id='nextLesson'>Lesson Number and Link</span></p><br>
    <br>
