Add window.onload and change to generic

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 </div>
 
 <div class="mdl-card mdl-shadow--16dp teacher-card-square">
-  <div id="cardTitle" class="mdl-card__title mdl-card--expand teacher-Bryce">
-    <h2 id="lessonNumberHeader" class="mdl-card__title-text">Lesson 25</h2>
+  <div id="cardTitle" class="mdl-card__title mdl-card--expand">
+    <h2 id="lessonNumberHeader" class="mdl-card__title-text">Lesson</h2>
   </div>
   <div id="lessonTagline" class="mdl-card__supporting-text">
-    Parable of the Ten Virgins
+    Lesson Title
   </div>
   <div class="mdl-card__actions mdl-card--border">
     <a id="lessonLink" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
