--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
 <div class="page">
 <div class="controls" style="">
-    <button onclick = "App.previousWeek()" class="mdl-button mdl-button--colored mdl-js-button mdl-button--raised mdl-js-ripple-effect"> Previous Week</button>
+    <button onclick = "App.previousWeek()" class="mdl-button mdl-button--colored mdl-js-button mdl-button--raised mdl-js-ripple-effect"> Previous</button>
 
   <p style="text-align:center; width:30%; color:white"><span>Lesson Date:</span><br>
   <span id='nextLessonDate'>Next Lesson Date</span><br>
    <br>
   <br></p>
-  <button onclick="App.nextWeek()" class="mdl-button mdl-js-button mdl-button--colored mdl-button--raised mdl-js-ripple-effect"> Next Week</button>
+  <button onclick="App.nextWeek()" class="mdl-button mdl-js-button mdl-button--colored mdl-button--raised mdl-js-ripple-effect"> Next</button>
   
 </div>
 
